<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProjectNew">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:src="@drawable/home_thesis2"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Create New Project"
            android:textSize="25sp"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            android:textColor="#000000"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/PN_name"
            android:hint="@string/project_name"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/PN_category"
            android:hint="@string/category"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/PN_description"
            android:hint="@string/description"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/PN_framework"
            android:hint="@string/framework"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/PN_platform"
            android:hint="@string/platform"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/PN_requirement"
            android:hint="@string/requirement"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/PN_prerequisite"
            android:hint="@string/prerequisite"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.toptoche.searchablespinnerlibrary.SearchableSpinner
            android:id="@+id/PN_status_spinner"
            android:layout_width="match_parent"
            app:hintText="Status"
            android:layout_marginTop="3dp"
            android:background="@drawable/spinner_design"
            android:layout_height="50dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:gravity="center"
            android:text="@string/add_project_member"
            android:layout_margin="4dp"
            android:textColor="@color/Black"
            android:textSize="20sp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/PN_member"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">


            <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                android:id="@+id/PN_member_name"
                android:layout_width="match_parent"
                android:hint="@string/member_name"
                android:layout_marginLeft="8dp"
                android:layout_height="56dp"
                android:completionThreshold="1"
                android:completionHint="Member Username"
                android:inputType="text"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.toptoche.searchablespinnerlibrary.SearchableSpinner
            android:id="@+id/PN_role_spinner"
            android:layout_width="match_parent"
            app:hintText="Role"
            android:layout_marginTop="3dp"
            android:background="@drawable/spinner_design"
            android:layout_height="50dp"
            />

        <Button
            android:id="@+id/PN_btnAddMember"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="ADD MEMBER"
            android:background="@color/Black"
            android:textColor="@color/White"
            android:layout_marginTop="4dp"
            />



        <androidx.recyclerview.widget.RecyclerView
            android:visibility="gone"
            tools:visibility="visible"
            android:id="@+id/PN_recylerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:padding="4dp"
            android:scrollbars="vertical" />



        <Button
            android:id="@+id/PN_btnCreate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Create Project"
            android:background="@color/Black"
            android:textColor="@color/White"
            android:layout_marginTop="4dp"
            />

        <ProgressBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            tools:visibility="visible"
            android:id="@+id/PN_progressBar"/>

    </LinearLayout>

</ScrollView>