<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdminTaskDetails">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:src="@drawable/list"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Task Details"
            android:textSize="25sp"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            android:textColor="#000000"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ATD_name"
            android:hint="@string/task_name"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ATD_name_input"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:enabled="false"
                android:textColor="@color/Black"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ATD_serial"
            android:hint="@string/task_serial"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ATD_serial_input"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="number"
                android:enabled="false"
                android:textColor="@color/Black"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ATD_category"
            android:hint="@string/category"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ATD_category_input"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:enabled="false"
                android:textColor="@color/Black"
                />

        </com.google.android.material.textfield.TextInputLayout>



        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ATD_description"
            android:hint="@string/description"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ATD_description_input"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text"
                android:enabled="false"
                android:textColor="@color/Black"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ATD_priority"
            android:hint="@string/priority"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ATD_priority_input"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:enabled="false"
                android:textColor="@color/Black"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ATD_solution"
            android:hint="@string/solution"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ATD_solution_input"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:enabled="false"
                android:textColor="@color/Black"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ATD_deadline"
            android:hint="@string/deadline"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ATD_deadline_input"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text"
                android:enabled="false"
                android:textColor="@color/Black"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ATD_assigningTo"
            android:hint="@string/assigning_to"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ATD_assigningTo_input"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text"
                android:enabled="false"
                android:textColor="@color/Black"
                />

        </com.google.android.material.textfield.TextInputLayout>



        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ATD_points"
            android:hint="Task Points"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ATD_points_input"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="number"
                android:enabled="false"
                android:textColor="@color/Black"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ATD_status"
            android:hint="@string/status"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ATD_status_input"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:enabled="false"
                android:textColor="@color/Black"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ATD_issues"
            android:hint="Issues"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ATD_issues_input"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:enabled="false"
                android:textColor="@color/Black"
                />

        </com.google.android.material.textfield.TextInputLayout>


        <LinearLayout
            android:id="@+id/ATD_link_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <com.google.android.material.textfield.TextInputLayout
                android:layout_weight="8"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/ATD_link"
                android:hint="Link"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ATD_link_input"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:lines="1"
                    android:textColor="@color/Black"
                    android:enabled="false"
                    />


            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/ATD_btnCopy"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_margin="7dp"
                android:layout_height="46dp"
                android:background="@drawable/browser_circle"/>

        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ATD_comments"
            android:hint="@string/comments"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ATD_comments_input"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:enabled="false"
                android:textColor="@color/Black"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ATD_modifiedDate"
            android:hint="@string/modified_date"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ATD_modifiedDate_input"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:enabled="false"
                android:textColor="@color/Black"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ATD_modifiedUser"
            android:hint="@string/modified_by"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ATD_modifiedUser_input"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:enabled="false"
                android:textColor="@color/Black"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ATD_createdDate"
            android:hint="@string/created_date"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ATD_createdDate_input"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:enabled="false"
                android:textColor="@color/Black"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ATD_createdUser"
            android:hint="@string/created_by"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ATD_createdUser_input"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:enabled="false"
                android:textColor="@color/Black"
                />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

</ScrollView>